force-app/main/default/objects/copado__User_Story_Data_Commit__c/fields/copado__Commit_Message__c.field-meta.xml
<CustomField>
    <fullName>copado__Commit_Message__c</fullName>
    <label>Commit Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>