force-app/main/default/objects/copado__User_Story_Data_Commit__c/fields/copado__Data_Set__c.field-meta.xml
<CustomField>
    <fullName>copado__Data_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Set</label>
    <referenceTo>copado__Data_Set__c</referenceTo>
    <relationshipLabel>User Story Data Commits</relationshipLabel>
    <relationshipName>User_Story_Data_Commits</relationshipName>
    <type>Lookup</type>
</CustomField>