force-app/main/default/objects/copado__User_Story_Data_Commit__c/fields/copado__Generate_Data_Set_Job_Execution_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Generate_Data_Set_Job_Execution_Id__c</fullName>
    <label>Generate Data Set Job Execution Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>