force-app/main/default/objects/copado__User_Story_Data_Commit__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <formula>TEXT(copado__Execution_Job__r.copado__Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>