force-app/main/default/objects/copado__User_Story_Data_Commit__c/validationRules/copado__Prevent_change_Execution_Job.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__Prevent_change_Execution_Job</fullName>
    <active>true</active>
    <description>This validation rule prevents the user from changing the Execution Job field once the record has been created.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(copado__Execution_Job__c)
)</errorConditionFormula>
    <errorDisplayField>copado__Execution_Job__c</errorDisplayField>
    <errorMessage>It is not allowed to change the Execution Job once the User Story Data Commit has been created. Please create a new  User Story Data Commit.</errorMessage>
</ValidationRule>